[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
position = Vector2( 322.193, 222.05 )

[node name="YSort" type="YSort" parent="."]

[node name="KinematicBody2D" type="KinematicBody2D" parent="YSort"]
position = Vector2( 64.2842, -2.13042 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite3" type="Sprite" parent="YSort/KinematicBody2D"]
position = Vector2( 0, 50 )
z_as_relative = false
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="YSort/KinematicBody2D"]
z_as_relative = false
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="YSort/KinematicBody2D"]
margin_left = 69.8456
margin_top = -71.433
margin_right = 109.846
margin_bottom = -57.433
text = "parented"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="YSort/KinematicBody2D"]
margin_left = 97.9072
margin_top = -45.6164
margin_right = 277.907
margin_bottom = -31.6164
text = "visualserver sorting disabled"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="asdf" type="Sprite" parent="YSort"]
position = Vector2( 67.9551, 82.1849 )
z_as_relative = false
texture = ExtResource( 1 )

[node name="asdfx" type="Sprite" parent="YSort"]
position = Vector2( 32.0883, 21.4301 )
z_as_relative = false
texture = ExtResource( 1 )
